--- a/app/src/main/res/drawable/circle_bg.xml
+++ b/app/src/main/res/drawable/circle_bg.xml
@@ -6,7 +6,7 @@
         android:color="@color/white"/>
 
     <stroke
-        android:width="2dp"
+        android:width="@dimen/_6sdp"
         android:color="@color/primary_color"/>
 
 </shape>
