--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
@@ -127,11 +127,12 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fillViewport="true"
             android:scrollbars="none">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:background="@color/et_bg_gray"
                 android:orientation="vertical">
 
@@ -1958,41 +1959,37 @@
                     android:id="@+id/ll_get_started_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:visibility="gone"
-                    android:layout_marginBottom="@dimen/_10sdp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginHorizontal="@dimen/_11sdp"
                         android:layout_marginTop="@dimen/_11sdp"
+                        android:layout_marginBottom="@dimen/_11sdp"
                         app:cardCornerRadius="@dimen/_10sdp">
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:gravity="center"
-                            android:orientation="vertical">
+                            android:gravity="center">
 
                             <ImageView
                                 android:id="@+id/imgHead"
-                                android:layout_width="@dimen/_80sdp"
-                                android:layout_height="@dimen/_90sdp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
                                 android:layout_marginTop="@dimen/_47sdp"
                                 android:contentDescription="@string/additional_action_required"
                                 android:src="@drawable/ic_ssn_fail" />
-
-                            <View
-                                android:id="@+id/divider"
-                                android:layout_width="159.8564453125dp"
-                                android:layout_height="5.4189453125dp"
-                                android:background="#1c567675" />
 
                             <TextView
                                 android:id="@+id/tvHead"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_below="@+id/imgHead"
+                                android:layout_centerHorizontal="true"
                                 android:layout_marginTop="@dimen/_28sdp"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:padding="@dimen/_5sdp"
@@ -2003,6 +2000,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_below="@+id/tvHead"
                                 android:layout_marginTop="@dimen/_15sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:gravity="center"
@@ -2015,8 +2013,8 @@
                                 android:id="@+id/cv_app_get_started"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_42sdp"
+                                android:layout_alignParentBottom="true"
                                 android:layout_marginLeft="@dimen/_12sdp"
-                                android:layout_marginTop="@dimen/_25sdp"
                                 android:layout_marginRight="@dimen/_12sdp"
                                 android:layout_marginBottom="@dimen/_10sdp"
                                 app:cardBackgroundColor="@color/primary_green"
@@ -2031,14 +2029,11 @@
                                     android:textColor="@color/white"
                                     android:textSize="@dimen/_12ssp" />
                             </androidx.cardview.widget.CardView>
-                        </LinearLayout>
+                        </RelativeLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
-
             </LinearLayout>
         </ScrollView>
-
-
     </LinearLayout>
 </RelativeLayout>
