--- a/app/src/main/res/layout/activity_additional_information_required.xml
+++ b/app/src/main/res/layout/activity_additional_information_required.xml
@@ -180,7 +180,8 @@
                 android:fontFamily="@font/opensans_regular"
                 android:text="@string/saved_automatically"
                 android:textColor="@color/dark_grey"
-                android:textSize="@dimen/_11ssp" />
+                android:textSize="@dimen/_11ssp"
+                android:visibility="gone"/>
         </LinearLayout>
     </ScrollView>
 
