--- a/app/src/main/res/layout/activity_bank_accout_added_successfully.xml
+++ b/app/src/main/res/layout/activity_bank_accout_added_successfully.xml
@@ -161,5 +161,6 @@
         android:text="@string/saved_automatically"
         android:textAlignment="center"
         android:textColor="@color/xdark_gray"
-        android:textSize="@dimen/_11ssp" />
+        android:textSize="@dimen/_11ssp"
+        android:visibility="gone"/>
 </RelativeLayout>
