--- a/app/src/main/res/layout/activity_benificial_mailling_address.xml
+++ b/app/src/main/res/layout/activity_benificial_mailling_address.xml
@@ -426,6 +426,7 @@
                 android:layout_marginTop="@dimen/_5sdp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/_27sdp"
+                android:visibility="gone"
                 />
 
         </LinearLayout>
