--- a/app/src/main/res/layout/default_account_dialog.xml
+++ b/app/src/main/res/layout/default_account_dialog.xml
@@ -23,8 +23,10 @@
         <ExpandableListView
             android:id="@+id/business_profile_accounts_expandable_list"
             android:layout_width="match_parent"
+            android:visibility="visible"
             android:layout_height="wrap_content"
             android:divider="@null"
+            android:layout_marginBottom="@dimen/_15sdp"
             android:groupIndicator="@null" />
 
         <View
@@ -44,7 +46,7 @@
                 android:id="@+id/profile_account_profile_image"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:layout_gravity="center"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_10ssp"
                 android:layout_marginBottom="@dimen/_10ssp"
@@ -76,13 +78,25 @@
 
             <TextView
                 android:id="@+id/defualt_account_dialog_personal_name"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_10ssp"
                 android:fontFamily="@font/opensans_semibold"
-                android:text="Jonathan Joestar"
+                android:text="Jonathan Joestar  "
+                android:layout_weight="1"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11sdp" />
+
+            <ImageView
+                android:id="@+id/tickIcon"
+                android:visibility="gone"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="@dimen/_5sdp"
+                android:src="@drawable/ic_custom_tick"
+                app:tint="@color/primary_green" />
 
         </LinearLayout>
 
