--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -1104,7 +1104,8 @@
                 android:layout_marginLeft="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginRight="@dimen/_21sdp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginBottom="@dimen/_20sdp">
 
                 <CheckBox
                     android:id="@+id/agreeCB"
@@ -1123,7 +1124,7 @@
                     android:text="I agree to "
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/tosTV"
@@ -1133,7 +1134,7 @@
                     android:text="@string/termsservice"
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -1142,7 +1143,7 @@
                     android:text=" &amp; "
                     android:textColor="@color/black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/privacyTV"
@@ -1152,17 +1153,17 @@
                     android:text="@string/privay_policy"
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="gone" />
+                    android:visibility="visible" />
 
                 <TextView
                     android:id="@+id/spannableTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_30sdp"
                     android:fontFamily="@font/opensans_regular"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="visible"
-                    android:layout_marginBottom="@dimen/_30sdp"/>
+                    android:visibility="gone" />
             </LinearLayout>
 
 
