--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -86,7 +86,7 @@
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/_10sdp"
                     android:orientation="vertical"
-                    android:paddingBottom="@dimen/_30sdp">
+                    android:paddingBottom="@dimen/_10sdp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/currentPassTIL"
@@ -154,11 +154,12 @@
                                 android:id="@+id/etPassword"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:autofillHints="creditCardSecurityCode"
+                                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionNext"
                                 android:inputType="textPassword"
+                                android:longClickable="false"
                                 android:maxLength="12"
                                 android:maxLines="1"
                                 android:padding="@dimen/_14sdp"
@@ -167,6 +168,7 @@
                                 android:textColor="@color/text_color"
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
+                                android:textIsSelectable="false"
                                 android:textSize="@dimen/_12ssp" />
 
                         </com.google.android.material.textfield.TextInputLayout>
@@ -253,6 +255,7 @@
                         android:layout_below="@+id/tvPasswordInfo"
                         android:layout_marginTop="@dimen/_20sdp"
                         android:hint="Confirm Password"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:textColorHint="@color/light_gray"
                         app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                         app:boxCornerRadiusBottomStart="@dimen/_10sdp"
@@ -274,6 +277,8 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
+                            android:longClickable="false"
+                            android:textIsSelectable="false"
                             android:maxLength="12"
                             android:maxLines="1"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
