--- a/app/src/main/res/layout/activity_edit_team_member.xml
+++ b/app/src/main/res/layout/activity_edit_team_member.xml
@@ -4,107 +4,110 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.business.EditTeamMember"
+    android:orientation="vertical"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
-    android:orientation="vertical">
+    tools:context=".view.business.EditTeamMember">
+
     <ImageView
+        android:id="@+id/backBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_chevron_left"
-        android:layout_marginTop="@dimen/_44sdp"
         android:layout_marginStart="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_44sdp"
         android:layout_marginBottom="@dimen/_13sdp"
-        />
+        android:src="@drawable/ic_chevron_left" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:text="Edit Team Member"
-        android:fontFamily="@font/opensans_bold"
-        android:textSize="@dimen/_16ssp"
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginBottom="@dimen/_11sdp"
-        />
+        android:fontFamily="@font/opensans_bold"
+        android:text="Edit Team Member"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginStart="@dimen/_21sdp"
-        android:layout_marginEnd="@dimen/_21sdp"
         android:layout_marginTop="@dimen/_23sdp"
+        android:layout_marginEnd="@dimen/_21sdp"
         android:layout_marginBottom="@dimen/_17sdp"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_person_img"
             android:layout_marginEnd="@dimen/_7sdp"
-            />
+            android:src="@drawable/ic_person_img" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Administrator"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_semibold"
-                android:textColor="@color/primary_black"
                 android:layout_marginBottom="@dimen/_1sdp"
-                />
+                android:fontFamily="@font/opensans_semibold"
+                android:text="Administrator"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_12ssp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Full administrator permission"
-                android:textSize="@dimen/_11ssp"
                 android:fontFamily="@font/opensans_regular"
+                android:text="Full administrator permission"
                 android:textColor="@color/xdark_gray"
-                />
+                android:textSize="@dimen/_11ssp" />
 
         </LinearLayout>
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_21sdp"
-        >
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/edit_fName_til"
-        style="@style/TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="First Name"
-        android:textColorHint="@color/light_gray"
-        app:boxStrokeColor="@color/primary_green"
-        app:errorIconDrawable="@null"
-        app:hintTextColor="@color/primary_green">
+        android:orientation="vertical">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editFNameET"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/edit_fName_til"
+            style="@style/TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-            android:fontFamily="@font/opensans_semibold"
-            android:imeOptions="actionNext"
-            android:inputType="text|textNoSuggestions"
-            android:maxLength="30"
-            android:maxLines="1"
-            android:padding="@dimen/_14sdp"
-            android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-            android:singleLine="true"
-            android:textColor="@color/text_color"
+            android:hint="First Name"
             android:textColorHint="@color/light_gray"
-            android:textCursorDrawable="@drawable/cursor_color"
-            android:textIsSelectable="false"
-            android:textSize="@dimen/_12ssp" />
+            app:boxStrokeColor="@color/primary_green"
+            app:errorIconDrawable="@null"
+            app:hintTextColor="@color/primary_green">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editFNameET"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                android:fontFamily="@font/opensans_semibold"
+                android:imeOptions="actionNext"
+                android:inputType="text|textNoSuggestions"
+                android:maxLength="30"
+                android:maxLines="1"
+                android:padding="@dimen/_14sdp"
+                android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                android:singleLine="true"
+                android:textColor="@color/text_color"
+                android:textColorHint="@color/light_gray"
+                android:textCursorDrawable="@drawable/cursor_color"
+                android:textIsSelectable="false"
+                android:textSize="@dimen/_12ssp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
         <LinearLayout
             android:id="@+id/editfirstNameErrorLL"
             android:layout_width="match_parent"
@@ -217,6 +220,7 @@
                 android:textIsSelectable="false"
                 android:textSize="@dimen/_12ssp" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <LinearLayout
             android:id="@+id/editemailErrorLL"
             android:layout_width="match_parent"
@@ -247,7 +251,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_14sdp"
-            android:layout_marginBottom="@dimen/_8sdp"/>
+            android:layout_marginBottom="@dimen/_8sdp" />
+
         <LinearLayout
             android:id="@+id/editphoneErrorLL"
             android:layout_width="match_parent"
@@ -277,12 +282,11 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/_15sdp"
+            android:fontFamily="@font/opensans_regular"
             android:text="*Please Note: New team members get full\nadministrator permission"
             android:textColor="@color/xdark_gray"
-            android:textSize="@dimen/_11ssp"
-            android:fontFamily="@font/opensans_regular"
-            android:layout_marginBottom="@dimen/_47sdp"
-            />
+            android:textSize="@dimen/_11ssp" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/sendCV"
@@ -310,7 +314,6 @@
                     android:textSize="@dimen/_12ssp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
-
 
 
     </LinearLayout>
