--- a/app/src/main/res/layout/authorization_failed.xml
+++ b/app/src/main/res/layout/authorization_failed.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/white">
 
 
     <ImageView
@@ -19,10 +20,10 @@
         android:id="@+id/tvAFailed"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
+        android:layout_below="@+id/failedIV"
         android:fontFamily="@font/opensans_bold"
         android:text="Authorization Failed"
-        android:layout_below="@+id/failedIV"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp" />
 
@@ -39,6 +40,7 @@
         android:textAlignment="center"
         android:textColor="@color/primary_black"
         android:textSize="@dimen/_12ssp" />
+
     <TextView
         android:id="@+id/tvMessageLine"
         android:layout_width="match_parent"
@@ -47,12 +49,12 @@
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_21sdp"
         android:fontFamily="@font/opensans_regular"
-        android:textAlignment="center"
         android:lineHeight="@dimen/_21sdp"
         android:text="@string/card_authorization_failed"
+        android:textAlignment="center"
         android:textColor="@color/primary_black"
         android:textSize="@dimen/_12ssp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 
     <androidx.cardview.widget.CardView
@@ -62,10 +64,10 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_21sdp"
+        android:layout_marginBottom="@dimen/_32sdp"
         android:gravity="center"
         app:cardBackgroundColor="@color/primary_green"
-        app:cardCornerRadius="@dimen/_21sdp"
-        android:layout_marginBottom="@dimen/_32sdp">
+        app:cardCornerRadius="@dimen/_21sdp">
 
         <TextView
             android:layout_width="match_parent"
