--- a/app/src/main/res/layout/activity_merchants_agrement.xml
+++ b/app/src/main/res/layout/activity_merchants_agrement.xml
@@ -46,29 +46,44 @@
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_margin="@dimen/_11sdp"
             android:layout_marginTop="@dimen/_10sdp"
             app:cardCornerRadius="@dimen/_10sdp">
 
-            <ScrollView
+            <WebView
+                android:id="@+id/webView"
+                android:visibility="visible"
+                android:background="@color/white"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/white"
-                    android:orientation="vertical"
-                    android:padding="@dimen/_11sdp">
+<!--            <ScrollView-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent">-->
+<!--                -->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:lineHeight="@dimen/_16ssp"
-                        android:text="@string/merchants_agreements" />
-                </LinearLayout>
-            </ScrollView>
+<!--                <LinearLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent"-->
+<!--                    android:background="@color/white"-->
+<!--                    android:orientation="vertical"-->
+<!--                    android:padding="@dimen/_11sdp">-->
+
+<!--                    <WebView-->
+<!--                        android:id="@+id/webView"-->
+<!--                        android:visibility="visible"-->
+<!--                        android:background="@color/white"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content" />-->
+
+<!--&lt;!&ndash;                    <TextView&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_width="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:layout_height="wrap_content"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:lineHeight="@dimen/_16ssp"&ndash;&gt;-->
+<!--&lt;!&ndash;                        android:text="@string/merchants_agreements" />&ndash;&gt;-->
+<!--                </LinearLayout>-->
+<!--            </ScrollView>-->
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
