--- a/app/src/main/res/layout/activity_edit_email2.xml
+++ b/app/src/main/res/layout/activity_edit_email2.xml
@@ -44,7 +44,7 @@
         </LinearLayout>
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginEnd="@dimen/_10sdp"
@@ -52,7 +52,7 @@
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingStart="@dimen/_10sdp"
             android:paddingEnd="@dimen/_10sdp"
@@ -92,7 +92,7 @@
                 android:id="@+id/saveCh"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
-                android:layout_marginTop="@dimen/_170sdp"
+                android:layout_marginTop="@dimen/_100sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
                 app:cardBackgroundColor="@color/primary_green"
                 app:cardCornerRadius="@dimen/_22sdp">
