--- a/app/src/main/res/layout/activity_add_payment_signet.xml
+++ b/app/src/main/res/layout/activity_add_payment_signet.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/layoutClose"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_marginLeft="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_35sdp"
                 android:gravity="center_vertical"
                 android:orientation="vertical">
@@ -31,7 +31,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_chevron_left" />
+                    android:contentDescription="@string/back_button"
+                    android:src="@drawable/ic_back" />
             </LinearLayout>
 
             <TextView
@@ -48,7 +49,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
+                android:layout_gravity="start"
                 android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_14sdp"
                 android:layout_marginEnd="@dimen/_21sdp"
@@ -77,7 +78,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_21sdp"
-                    android:hint="Name on Signet Account"
+                    android:hint="@string/name_on_signet_account"
                     android:textColorHint="@color/light_gray"
                     android:textCursorDrawable="@drawable/cursor_color"
                     app:boxStrokeColor="@color/primary_green"
@@ -108,7 +109,6 @@
                     android:id="@+id/nameErrorLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/etlName"
                     android:layout_marginHorizontal="@dimen/_26sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:gravity="center"
@@ -118,6 +118,7 @@
                     <ImageView
                         android:layout_width="@dimen/_12sdp"
                         android:layout_height="@dimen/_12sdp"
+                        android:contentDescription="@string/error_code"
                         android:src="@drawable/ic_erro" />
 
                     <TextView
@@ -137,7 +138,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="@dimen/_21sdp"
                     android:layout_marginTop="@dimen/_14sdp"
-                    android:hint="Signet Wallet ID"
+                    android:hint="@string/signet_wallet_id"
                     android:textColorHint="@color/light_gray"
                     app:boxStrokeColor="@color/primary_green"
                     app:hintTextColor="@color/primary_green">
@@ -167,7 +168,6 @@
                     android:id="@+id/walletErrorLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/etlName"
                     android:layout_marginHorizontal="@dimen/_26sdp"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:gravity="center"
@@ -177,6 +177,7 @@
                     <ImageView
                         android:layout_width="@dimen/_12sdp"
                         android:layout_height="@dimen/_12sdp"
+                        android:contentDescription="@string/error_code"
                         android:src="@drawable/ic_erro" />
 
                     <TextView
@@ -208,7 +209,7 @@
                         style="@style/TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Billing Address Line 1"
+                        android:hint="@string/billing_address_line_1"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
@@ -239,8 +240,7 @@
                         android:id="@+id/address1ErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -249,6 +249,7 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
+                            android:contentDescription="@string/error_code"
                             android:src="@drawable/ic_erro" />
 
                         <TextView
@@ -267,7 +268,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
-                        android:hint="Billing Address Line 2(Optional)"
+                        android:hint="@string/billing_address_line_2_optional"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
@@ -292,12 +293,12 @@
                             android:textIsSelectable="false"
                             android:textSize="@dimen/_12ssp" />
                     </com.google.android.material.textfield.TextInputLayout>
+
                     <LinearLayout
                         android:id="@+id/address2ErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -324,7 +325,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
-                        android:hint="City"
+                        android:hint="@string/city"
                         android:importantForAutofill="no"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
@@ -335,6 +336,7 @@
                             android:id="@+id/etCity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -356,8 +358,7 @@
                         android:id="@+id/cityErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -366,6 +367,7 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
+                            android:contentDescription="@string/error_code"
                             android:src="@drawable/ic_erro" />
 
                         <TextView
@@ -389,6 +391,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@color/white"
+                            android:contentDescription="@string/belowtxtre"
                             android:src="@drawable/ic_down"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="@+id/etlState"
@@ -405,7 +408,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_14sdp"
-                            android:hint="State"
+                            android:hint="@string/state"
                             android:importantForAutofill="no"
                             android:textColorHint="@color/light_gray"
                             app:boxStrokeColor="@color/primary_green"
@@ -443,8 +446,7 @@
                         android:id="@+id/stateErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -453,6 +455,7 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
+                            android:contentDescription="@string/error_code"
                             android:src="@drawable/ic_erro" />
 
                         <TextView
@@ -471,7 +474,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_14sdp"
-                        android:hint="Zip Code"
+                        android:hint="@string/zip_code"
                         android:textColorHint="@color/light_gray"
                         app:boxStrokeColor="@color/primary_green"
                         app:errorIconDrawable="@null"
@@ -481,6 +484,7 @@
                             android:id="@+id/etZipCode"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                             android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionDone"
@@ -502,8 +506,7 @@
                         android:id="@+id/zipErrorLL"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/etlName"
-                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_5sdp"
                         android:layout_marginTop="@dimen/_5sdp"
                         android:gravity="center"
                         android:orientation="horizontal"
@@ -512,6 +515,7 @@
                         <ImageView
                             android:layout_width="@dimen/_12sdp"
                             android:layout_height="@dimen/_12sdp"
+                            android:contentDescription="@string/zipcode"
                             android:src="@drawable/ic_erro" />
 
                         <TextView
@@ -540,7 +544,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:enabled="false"
-                            android:hint="Country"
+                            android:hint="@string/country"
                             android:textColorHint="@color/xdark_gray"
                             app:boxStrokeColor="@color/primary_green"
                             app:errorIconDrawable="@null"
@@ -556,12 +560,12 @@
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionNext"
                                 android:inputType="text|textNoSuggestions"
-                                android:maxLength="30"
+                                android:maxLength="50"
                                 android:maxLines="1"
                                 android:padding="@dimen/_14sdp"
                                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                                 android:singleLine="true"
-                                android:text="United States"
+                                android:text="@string/united_states"
                                 android:textColor="@color/xdark_gray"
                                 android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursor_color"
@@ -590,7 +594,7 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/opensans_bold"
                         android:gravity="center"
-                        android:text="Add"
+                        android:text="@string/add"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_12ssp" />
                 </androidx.cardview.widget.CardView>
