--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -208,7 +208,7 @@
                                     android:id="@+id/idVeriSSNET"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:autofillHints="creditCardSecurityCode"
+                                    android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:imeOptions="actionDone"
                                     android:inputType="number"
@@ -526,7 +526,7 @@
                                 android:id="@+id/cityET"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:autofillHints="creditCardSecurityCode"
+                                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionNext"
@@ -652,7 +652,7 @@
                                 android:id="@+id/zipcodeET"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:autofillHints="creditCardSecurityCode"
+                                android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                 android:digits="0123456789"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
