--- a/app/src/main/res/layout/add_note_layout.xml
+++ b/app/src/main/res/layout/add_note_layout.xml
@@ -46,12 +46,13 @@
                 android:layout_height="@dimen/_80sdp"
                 android:layout_gravity="center_vertical"
                 android:background="@null"
+                android:autofillHints="creditCardSecurityCode"
                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                 android:fontFamily="@font/opensans_semibold"
                 android:gravity="top"
                 android:hint="Optional: Add Note (Maximum 120 characters)"
                 android:imeOptions="actionDone"
-                android:inputType="textMultiLine"
+                android:inputType="textMultiLine|textCapSentences"
                 android:lineSpacingExtra="3dp"
                 android:maxLength="120"
                 android:padding="15dp"
