--- a/app/src/main/res/layout/list_item_team.xml
+++ b/app/src/main/res/layout/list_item_team.xml
@@ -3,133 +3,132 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    >
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:background="@color/white">
 
     <LinearLayout
-        android:id="@+id/teamLL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_17sdp"
-        android:layout_marginEnd="@dimen/_11sdp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/teamLL"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:layout_marginTop="@dimen/_17sdp"
+            android:layout_marginEnd="@dimen/_11sdp"
+            android:orientation="horizontal">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="@dimen/_34sdp"
-                android:layout_height="@dimen/_34sdp"
-                android:layout_alignParentEnd="true"
-                android:background="@drawable/corecircle"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-
-                <androidx.cardview.widget.CardView
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/linearLayout"
                     android:layout_width="@dimen/_34sdp"
                     android:layout_height="@dimen/_34sdp"
-                    android:layout_alignParentRight="true"
-                    android:layout_gravity="center"
-                    app:cardBackgroundColor="@color/primary_green"
-                    app:cardCornerRadius="@dimen/_24sdp"
+                    android:layout_alignParentEnd="true"
+                    android:background="@drawable/corecircle"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
-                    <ImageView
-                        android:id="@+id/userProfileIV"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:scaleType="fitXY"
-                        android:visibility="visible" />
 
-                    <TextView
-                        android:id="@+id/imageTextTV"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="@dimen/_34sdp"
+                        android:layout_height="@dimen/_34sdp"
+                        android:layout_alignParentRight="true"
                         android:layout_gravity="center"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text=""
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_14ssp" />
-                </androidx.cardview.widget.CardView>
+                        app:cardBackgroundColor="@color/primary_green"
+                        app:cardCornerRadius="@dimen/_24sdp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
+                        <ImageView
+                            android:id="@+id/userProfileIV"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="fitXY"
+                            android:visibility="visible" />
+
+                        <TextView
+                            android:id="@+id/imageTextTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:fontFamily="@font/opensans_bold"
+                            android:text=""
+                            android:textColor="@color/white"
+                            android:textSize="@dimen/_14ssp" />
+                    </androidx.cardview.widget.CardView>
+
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <!--                <ImageView-->
+                <!--                    android:id="@+id/editProfileIV"-->
+                <!--                    android:layout_width="@dimen/_10sdp"-->
+                <!--                    android:layout_height="@dimen/_10sdp"-->
+                <!--                    android:background="@drawable/pending_dot"-->
+                <!--                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"-->
+                <!--                    app:layout_constraintEnd_toEndOf="@+id/linearLayout" />-->
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!--                <ImageView-->
-            <!--                    android:id="@+id/editProfileIV"-->
-            <!--                    android:layout_width="@dimen/_10sdp"-->
-            <!--                    android:layout_height="@dimen/_10sdp"-->
-            <!--                    android:background="@drawable/pending_dot"-->
-            <!--                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout"-->
-            <!--                    app:layout_constraintEnd_toEndOf="@+id/linearLayout" />-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_11sdp"
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:text=""
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_11sdp"
-            android:layout_weight="1"
-            android:orientation="vertical">
+                <TextView
+                    android:id="@+id/role"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text=""
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_semibold"
-                android:text=""
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
-
-            <TextView
-                android:id="@+id/role"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:id="@+id/status"
+                android:layout_width="@dimen/_60sdp"
+                android:layout_height="@dimen/_24sdp"
                 android:layout_marginTop="@dimen/_6sdp"
-                android:fontFamily="@font/opensans_regular"
+                android:layout_marginRight="@dimen/_20sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
                 android:text=""
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                android:textColor="@color/orange"
+                android:textSize="@dimen/_8ssp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:src="@drawable/ic_rightarrow" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/status"
-            android:layout_width="@dimen/_60sdp"
-            android:layout_height="@dimen/_24sdp"
-            android:layout_marginTop="@dimen/_6sdp"
-            android:fontFamily="@font/opensans_bold"
-            android:gravity="center"
-            android:text=""
-            android:layout_marginRight="@dimen/_20sdp"
-            android:textColor="@color/orange"
-            android:textSize="@dimen/_8ssp" />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/ic_rightarrow" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_1sdp"
+            android:layout_marginTop="@dimen/_13sdp"
+            android:layout_marginBottom="@dimen/_2sdp"
+            android:background="@color/viewcolor" />
     </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_1sdp"
-        android:layout_marginTop="@dimen/_13sdp"
-        android:layout_marginBottom="@dimen/_2sdp"
-        android:background="@color/viewcolor" />
-</LinearLayout>
 </RelativeLayout>
