--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -587,6 +587,19 @@
                         android:text="Website (Optional)"
                         android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_11ssp" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_7sdp"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:textColor="@color/primary_black"
+                        android:text="Http://"
+                        android:textSize="@dimen/_12ssp" />
 
                     <TextView
                         android:id="@+id/website"
@@ -596,7 +609,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_12ssp" />
-
+                    </LinearLayout>
                     <View
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_1sdp"
