--- a/app/src/main/res/layout/activity_signature.xml
+++ b/app/src/main/res/layout/activity_signature.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -51,12 +52,21 @@
             android:layout_marginTop="@dimen/_17sdp"
             android:layout_marginEnd="@dimen/_46sdp"
             android:layout_weight="1"
-            android:background="@color/white">
+            android:background="@drawable/bg_white_color">
+
 
             <com.greenbox.coyni.utils.CustomSignatureView
                 android:id="@+id/csv_signature_view"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/_35sdp" />
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_2sdp"
+                android:layout_marginTop="@dimen/_170sdp"
+                android:layout_marginStart="@dimen/_14sdp"
+                android:layout_marginEnd="@dimen/_14sdp"
+                android:background="@color/light_gray"/>
         </RelativeLayout>
 
         <TextView
